# matsuzawa-20260213-2

./: package-lock.json  pyproject.toml
.github/workflows/: compile_latex.yml  run_visualization.yml
.research/: research_history.json
.research/latex/mdpi/: main.tex  references.bib
.research/results/: stdout.txt
.research/results/comparative-1-gsm8k/: metrics.json
.research/results/comparative-1-svamp/: metrics.json
.research/results/comparison/: aggregated_metrics.json
.research/results/proposed-gsm8k/: metrics.json
.research/results/proposed-svamp/: metrics.json
config/: config.yaml
config/run/: comparative-1-gsm8k.yaml  comparative-1-svamp.yaml  proposed-gsm8k.yaml  proposed-svamp.yaml
src/: evaluate.py  inference.py  main.py  preprocess.py
